css/style.css
.text_red
{
  color: red;
}

.text_white
{
  color: white;
}

/* homepage with statistics */
.node--type-a3d-platform-homepage .node__content
{
  display: grid;
}

.node--type-a3d-platform-homepage .node__content div.field--name-field-banner-text
{
  grid-column: 1 / 3;
}

.node--type-a3d-platform-homepage .node__content div.views-element-container
{
  grid-column: 1 / 2;
}

/*
.node--type-a3d-platform-homepage .node__content .views-element-container div.view-display-id-eva_statistics_object
{
	float: left;
	margin-right: 2rem;
	min-height: 7rem;
	border: 1px dotted black;
	padding: .5rem 1rem;
}
*/

.node--type-a3d-platform-homepage .node__content div.field--name-field-intro-text
{
  grid-column: 2 / 3;
}

.node--type-a3d-platform-homepage .node__content div.field--name-field-copyright-text
{
  grid-column: 1 / 3;
}

.node--type-a3d-platform-homepage .node__content div.field--name-field-citation-text
{
  grid-column: 1 / 3;
}

.node--type-a3d-platform-homepage .node__title
{
  display: none;
}

.node--type-a3d-platform-homepage .field--name-field-banner-text
{
  background-image: url(/themes/custom/islandora_muni/platform_specific/images/header_a3d.jpg);
/*
  background-repeat: no-repeat;
  background-size: contain;
  width: 100%;
  height: 25.3vw;
  max-width: 1170px;
  max-height: 297px;
  margin-bottom: 1rem;
*/
}

.exm .field--name-field-banner-text
{
  background-image: url(/themes/custom/islandora_muni/platform_specific/images/header.jpg);
}

.arf .field--name-field-banner-text
{
  background-image: url(/themes/custom/islandora_muni/platform_specific/images/header_arf.jpg);
}

.nef .field--name-field-banner-text
{
  background-image: url(/themes/custom/islandora_muni/platform_specific/images/header_nef.jpg);
}

.kch .field--name-field-banner-text
{
  background-image: url(/themes/custom/islandora_muni/platform_specific/images/kch_banner.JPG); }

/*
p.banner-container
{
  transform: translateY(2vw);
  font-weight: bold;
  color: white;
  padding: 1rem;
}

p.banner-container > span
{
  width: 100%;
  font-size: 1.3rem;
}

p.banner-container > span:nth-child(1)
{
  font-size: 3.2rem;
}
*/

.field--type-entity-reference
{
  margin-bottom: 0;
}

.views-label,
.field--type-entity-reference .field__label
{
  font-weight: bold;
}

.button:visited
{
  background-color: #004899;
  color: white;
  font-weight: bold;
  border-radius: 0;
  border: white solid 2px;
  text-decoration: none;
  background-image: none;
  padding: 0.6rem;
}

.block-sitelogo
{
  flex-grow: 1;
}

/* fixes search bar overflow */
.bef-exposed-form .form-item.form-type-textfield
{
  float: none;
}

/* bring back reset button */
#edit-reset,
#edit-reset--2,
#edit-reset--3,
#edit-reset--4 {
	display: inline-block;
}

.region-primary-menu ul#superfish-arf-main-menu > li:nth-last-child(5),
.region-primary-menu ul#superfish-exm-main-menu > li:nth-last-child(2),
.region-primary-menu ul#superfish-nef-main-menu > li:nth-last-child(5),
.region-primary-menu ul#superfish-kch-main-menu > li:nth-last-child(4),
.region-primary-menu ul#superfish-main > li:nth-last-child(5)
{
  flex-grow: 2;
}

.region-primary-menu ul.menu > li:nth-last-child(5)
{
  flex-grow: unset;
}

.media--type-video .field__item video
{
  width: 100%;
}


.a3d-editor-block .view-header .a3d-editor-block
{
  padding-top: 1em;
  display: flex;
}

.a3d-editor-block div.view-content
{
  display: none;
}

div.region-primary-menu
{
  display: flex;
}

.simplelogin-link .signreg
{
  display: none;
}

.simplelogin-form input.button
{
  background-color: #004899;
}

div.about-authors
{
  background-color: #F0F0F0;
  max-width: 650px;
  padding: 5px 20px 5px 20px;
}

.about-authors img
{
  padding-right: 15px;
  padding-bottom: 1.75em;
  width: 253px;
}

/* advanced search fields in grid */
#views-exposed-form-a3d-kch-search-index-kch-search div.form--inline,
#views-exposed-form-a3d-kch-analyses-search-page-1 div.form--inline {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.form-item-field-porosity {
    grid-column-start: 1;
}

#views-exposed-form-a3d-kch-analyses-search-page-1 .form-item-sort-by {
  grid-column-start: 1;
}

#views-exposed-form-a3d-kch-analyses-search-page-1 .form-item input,
#views-exposed-form-a3d-kch-search-index-kch-search .form-item input
{
    width: 100%;
    display: block;
}

#views-exposed-form-a3d-group-terms-a3d-all-terms div.form--inline,
#views-exposed-form-a3d-group-terms-a3d-platform-terms div.form--inline,
#views-exposed-form-a3d-meta-search-index-search-a3d div.form--inline,
#views-exposed-form-a3d-arf-search-index-search-arf div.form--inline,
#views-exposed-form-a3d-nef-search-index-search-nef div.form--inline
{
  display: grid;
}

#views-exposed-form-a3d-meta-search-index-search-a3d .form--inline .form-item input.form-text,
#views-exposed-form-a3d-meta-search-index-search-a3d .form--inline select.form-select,
#views-exposed-form-a3d-arf-search-index-search-arf .form--inline .form-item input.form-text,
#views-exposed-form-a3d-arf-search-index-search-arf .form--inline select.form-select,
#views-exposed-form-a3d-nef-search-index-search-nef .form--inline .form-item input.form-text,
#views-exposed-form-a3d-nef-search-index-search-nef .form--inline select.form-select,
#views-exposed-form-a3d-kch-search-index-kch-search .form--inline .form-item input.form-text,
#views-exposed-form-a3d-kch-search-index-kch-search .form--inline select.form-select
{
  width: 100%;
}

#views-exposed-form-a3d-group-terms-a3d-all-terms .form--inline > div.form-item:nth-child(2),
#views-exposed-form-a3d-group-terms-a3d-platform-terms .form--inline > div.form-item:nth-child(2)
{
  grid-column-end: 3;
}

#views-exposed-form-a3d-meta-search-index-search-a3d .form--inline > div:nth-child(3),
#views-exposed-form-a3d-arf-search-index-search-arf .form--inline > div.form-item:nth-child(3),
#views-exposed-form-a3d-nef-search-index-search-nef .form--inline > div.form-item:nth-child(3)
{
  grid-column-end: 4;
}

#views-exposed-form-a3d-arf-search-index-arf-search .form--inline > div.form-item:nth-child(11)
{
  grid-column-end: 2;
}

#views-exposed-form-a3d-arf-search-index-arf-search .form--inline > div#edit-actions:nth-last-child(1),
#views-exposed-form-a3d-nef-search-index-search-nef .form--inline > div#edit-actions:nth-last-child(1)
{
  grid-row-end: 6;
}

#views-exposed-form-a3d-meta-search-index-search-a3d .form--inline > div.form-item:nth-last-child(3)
{
  grid-column-end: 2;
}

#views-exposed-form-a3d-arf-search-index-search-arf .form--inline > div.form-item:nth-last-child(3)
{
  grid-column-start: 1;
}



.models a.button,
.view-a3d-nef-media article a.button,
.view-a3d-arf-media article a.button
{
  margin: 0;
}

.models canvas
{
  margin-bottom: 1em;
}

#views-exposed-form-a3d-meta-search-index-browse-a3d-paged,
#views-exposed-form-a3d-meta-search-index-search-a3d-paged,
#views-exposed-form-a3d-meta-search-index-taxonomy-a3d-paged,
#views-exposed-form-a3d-arf-search-index-browse-arf-paged,
#views-exposed-form-a3d-arf-search-index-search-arf-paged,
#views-exposed-form-a3d-arf-search-index-taxonomy-arf-paged,
#views-exposed-form-a3d-nef-search-index-browse-nef-paged,
#views-exposed-form-a3d-nef-search-index-browse-nef-all-paged,
#views-exposed-form-a3d-nef-search-index-search-nef-paged,
#views-exposed-form-a3d-nef-search-index-taxonomy-nef-paged
{
  display: none;
}

.a3d-grid-page .node--view-mode-meta-browse div.views-row,
.a3d-grid-page .views-view-grid .field-content div.views-row
{
  border: none;
  padding: 0;
  margin: 0;
}

.nef-grid-page .node--view-mode-nef-browse div.views-row,
.nef-grid-page .views-view-grid .field-content div.views-row
{
  border: none;
  padding: 0;
  margin: 0;
}

.hidden
{
  display: none;
}

.compare-floating
{
  position: fixed;
  z-index: 255;
  bottom: 1em;
  right: 1em;
}

.no-click
{
  pointer-events: none;
}

.fade-in
{
  opacity: 100%;
  transition: opacity 0.5s ease-in-out;
}

.fade-out
{
  opacity: 0;
  transition: opacity 0.5s ease-in-out;
}

/*
.view-display-id-a3d_search div.upper-pager,
.view-display-id-a3d_browse div.upper-pager,
.view-display-id-a3d_taxonomy div.upper-pager,
.view-display-id-arf_search div.upper-pager,
.view-display-id-arf_browse div.upper-pager,
.view-display-id-arf_taxonomy div.upper-pager,
.view-display-id-nef_search div.upper-pager,
.view-display-id-nef_browse div.upper-pager,
.view-display-id-nef_taxonomy div.upper-pager
{
  display: none;
}
*/

div.upper-pager
{
  display: none;
}

.all-pagers div.upper-pager
{
  display: inherit;
}

.view-display-id-a3d caption h3,
.view-display-id-arf caption h3,
.view-display-id-nef caption h3
{
  text-align: left;
}

/* hide link to user profile page */
.toolbar-menu li.account
{
  display: none
}

#views-exposed-form-a3d-meta-search-index-browse-a3d div.form--inline,
#views-exposed-form-a3d-meta-search-index-taxonomy-a3d div.form--inline,
#views-exposed-form-a3d-arf-search-index-browse-arf div.form--inline,
#views-exposed-form-a3d-arf-search-index-taxonomy-arf div.form--inline,
#views-exposed-form-a3d-nef-search-index-browse-nef div.form--inline,
#views-exposed-form-a3d-nef-search-index-browse-nef-all div.form--inline,
#views-exposed-form-a3d-nef-search-index-taxonomy-nef div.form--inline
{
  display: grid;
}

#views-exposed-form-a3d-meta-search-index-browse-a3d .form--inline #edit-actions--2,
#views-exposed-form-a3d-meta-search-index-taxonomy-a3d .form--inline #edit-actions--2,
#views-exposed-form-a3d-arf-search-index-browse-arf .form--inline #edit-actions--2,
#views-exposed-form-a3d-arf-search-index-taxonomy-arf .form--inline #edit-actions--2,
#views-exposed-form-a3d-nef-search-index-browse-nef .form--inline #edit-actions--2,
#views-exposed-form-a3d-nef-search-index-browse-nef-all .form--inline #edit-actions--2,
#views-exposed-form-a3d-nef-search-index-taxonomy-nef .form--inline #edit-actions--2
{
  grid-column-start: 3;
}

/*
.a3d-first-image {
  height: 400px;
  width: 100%;
  position: relative;
}

.a3d-first-image img {
  position: absolute;
  height: 100%;
  width: 100%;
  object-fit: contain;
}
*/

/* KCH advanced typology options */

details#edit-secondary--3 {
    grid-column-start: 1;
    grid-column-end: 4;
}

details#edit-secondary--3 > .details-wrapper {
  padding: 0.5em 1.5em;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.details-wrapper .form-item-field-sculpture-type {
    grid-column-start: 1;
}

.details-wrapper .form-item-field-st-placement-type1 {
    grid-column-start: 1;
}

.details-wrapper .form-item-field-st-shape-type1 {
    grid-column-start: 1;
}

/* end KCH advanced typology options */

.a3d-first-image {
  text-align: center;
}

div.views-field-block
{
  padding-bottom: 1em;
}

fieldset .fieldset-legend
{
  font-weight: bold;
}

fieldset .fieldset-wrapper .js-form-item label
{
  font-weight: normal;
}

/* fix whitespace on formatted text fields */

.views-field p:last-child {
  margin: 0;
}

.views-field.views-field-field-note .field-content,
.views-field.views-field-field-note-on-method .field-content,
.views-field.views-field-field-publications .field-content
{
  display: inline-block;
}

.views-label.views-label-field-note,
.views-label.views-label-field-note-on-method,
.views-label.views-label-field-publications
{
  vertical-align: top;
} 
/* end fix */

.fieldset-field-container div
{
  margin-left: 1em;
}

.platform-specific-logos div.content
{
  padding-right: 1em;
}

